@@ -20,11 +20,8 @@ package org.apache.hadoop.hdfs.server.datanode;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.security.PrivilegedExceptionAction;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 import org.apache.commons.logging.Log;
 import org.apache.hadoop.classification.InterfaceAudience;
@@ -53,7 +50,7 @@ class BlockPoolManager {
   private final Map<String, BPOfferService> bpByBlockPoolId =
     Maps.newHashMap();
   private final List<BPOfferService> offerServices =
-    Lists.newArrayList();
+      new CopyOnWriteArrayList<>();
 
   private final DataNode dn;
 
@@ -74,12 +71,14 @@ class BlockPoolManager {
   }
   
   /**
-   * Returns the array of BPOfferService objects. 
+   * Returns a list of BPOfferService objects. The underlying list
+   * implementation is a CopyOnWriteArrayList so it can be safely
+   * iterated while BPOfferServices are being added or removed.
+   *
    * Caution: The BPOfferService returned could be shutdown any time.
    */
-  synchronized BPOfferService[] getAllNamenodeThreads() {
-    BPOfferService[] bposArray = new BPOfferService[offerServices.size()];
-    return offerServices.toArray(bposArray);
+  synchronized List<BPOfferService> getAllNamenodeThreads() {
+    return Collections.unmodifiableList(offerServices);
   }
       
   synchronized BPOfferService get(String bpid) {
@@ -110,15 +109,13 @@ class BlockPoolManager {
     }
   }
   
-  void shutDownAll(BPOfferService[] bposArray) throws InterruptedException {
-    if (bposArray != null) {
-      for (BPOfferService bpos : bposArray) {
-        bpos.stop(); //interrupts the threads
-      }
-      //now join
-      for (BPOfferService bpos : bposArray) {
-        bpos.join();
-      }
+  void shutDownAll(List<BPOfferService> bposList) throws InterruptedException {
+    for (BPOfferService bpos : bposList) {
+      bpos.stop(); //interrupts the threads
+    }
+    //now join
+    for (BPOfferService bpos : bposList) {
+      bpos.join();
     }
   }
   
